...
import styles from './entities-screen.styles';

export default function EntitiesScreen({ navigation }) {
  return (
    <ScrollView style={styles.container} contentContainerStyle={styles.paddedScrollView} testID="entityScreenScrollList">
      <Text style={styles.centerText}>JHipster Entities will appear below</Text>
      <RoundedButton text="UserProfile" onPress={() => navigation.navigate('UserProfile')} testID="userProfileEntityScreenButton" />
      <RoundedButton text="SocialAccount" onPress={() => navigation.navigate('SocialAccount')} testID="socialAccountEntityScreenButton" />
      <RoundedButton
        text="TeacherProfile"
        onPress={() => navigation.navigate('TeacherProfile')}
        testID="teacherProfileEntityScreenButton"
      />
...
